Channel lower line out of alignment fix

--- a/src/UKP.Website/Content/css/application.css
+++ b/src/UKP.Website/Content/css/application.css
@@ -24,6 +24,7 @@
 
 .stream-container-inner ol.channel-list {
     width: 2880px;
+    top: -1px;
 }
 
 ol.channel-list {
